edition = "2023";  // successor to proto2 and proto3

package v1;

import weak "google/api/annotations.proto";
import "storage/node.proto";
import "google/protobuf/go_features.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";
option features.(pb.go).api_level = API_OPAQUE;

message ListNodesRequest {
  string cluster_id = 1;
}

message ListNodesResponse {
  repeated storage.Node nodes = 1 [lazy = true];
}

message GetNodeRequest {
  string cluster_id = 1;
  string node_id = 2;
}

message ExportNodeRequest {
  int32 timeout = 1;
  string query = 2;
}

message ExportNodeResponse {
  storage.Node node = 1 [lazy = true];
}

// storage.Node represents information about a node in the cluster.
service NodeService {
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse) {
    option (google.api.http) = {get: "/v1/nodes/{cluster_id}"};
  }

  rpc GetNode(GetNodeRequest) returns (storage.Node) {
    option (google.api.http) = {get: "/v1/nodes/{cluster_id}/{node_id}"};
  }

  rpc ExportNodes(ExportNodeRequest) returns (stream ExportNodeResponse) {
    option (google.api.http) = {get: "/v1/export/nodes"};
  }
}
